# tsdf

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  basic_reading_and_writing_numpy.html  basic_reading_and_writing_pandas.html  contact.html  converting_legacy_data.html  genindex.html  index.html  installation.html  introduction.html  mkdocs.yml  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  pytype.cfg  search.html  searchindex.js  sitemap.xml  tsdf_fields_table.html  validating_files.html  writing_data_from_scratch.html
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md  pull_request_template.md 
.github/ISSUE_TEMPLATE/: 01_bug_report.md  10_feature_request.md  20_blank.md  bug_report.md  feature_request.md
.github/workflows/: build-and-test.yml  fair-software.yml  mkdocs-deploy.yml  publish.yml  python-package.yml  pytype-checking.yml
_modules/: index.html
_modules/tsdf/: file_utils.html  legacy_tsdf_utils.html  numpy_utils.html  parse_metadata.html  read_binary.html  read_tsdf.html  tsdfmetadata.html  validator.html  write_binary.html  write_tsdf.html
_sources/: contact.md.txt
autoapi/tsdf/: index.html
basic_reading_and_writing/: index.html
basic_reading_and_writing_numpy/: index.html
basic_reading_and_writing_pandas/: index.html
contact/: index.html
converting_legacy_data/: index.html
data/: ppp_format_meta.json
docs/: Makefile  basic_reading_and_writing.ipynb  basic_reading_and_writing_numpy.ipynb  basic_reading_and_writing_pandas.ipynb  conf.py  contact.md  converting_legacy_data.ipynb  example.ipynb  index.md  index.rst  installation.md  introduction.md  make.bat  processing_example.ipynb  tsdf_channels_table.md  tsdf_dbpd_channels_and_units.md  tsdf_dbpd_schemas.md  tsdf_field_types.md  tsdf_fields.md  tsdf_fields_table.md  usage.ipynb  usage.md  validating_files.ipynb  writing_data_from_scratch.ipynb
docs/data/: example_meta.json
examples/: processing_example.ipynb  read_write_binary.ipynb
installation/: index.html
notebooks/: read_ppp.ipynb  read_write_binary.ipynb
paper/: paper.bib  paper.md
processing_example/: index.html
search/: search_index.json
src/tsdf/: __init__.py  constants.py  file_utils.py  io.py  io_binary.py  io_metadata.py  legacy_tsdf_utils.py  load_tsdf.py  numpy_utils.py  parse_metadata.py  read_binary.py  read_tsdf.py  recording.py  time_series.py  tsdf.py  tsdf_metadata.py  tsdfmetadata.py  utils_legacy_TSDF.py  utils_legacy_tsdf_rename.py  validator.py  write_binary.py  write_tsdf.py
tests/: test_constants.py  test_fixtures.py  test_io.py  test_io_metadata.py  test_legacy_tsdf.py  test_legacy_tsdf_utils.py  test_load_tsdf.py  test_parse_metadata.py  test_read_binary.py  test_read_tsdf.py  test_recording.py  test_time_series.py  test_tsdf.py  test_tsdf_metadata.py  test_utils_legacy_TSDF.py  test_validator.py  test_write_binary.py  test_write_metadata.py  test_write_tsdf.py  utils.py
tests/data/: README.md  date_format_fail.json  dummy_10_3_float32.json  dummy_10_3_float64.json  dummy_10_3_float64_fail.json  dummy_10_3_float64_meta.json  dummy_10_3_float64_meta_fail.json  dummy_10_3_int16.json  example_10_3_float32_meta.json  example_10_3_float64_meta.json  example_10_3_float64_meta_fail.json  example_10_3_int16_meta.json  flat.json  hierarchical.json  hierarchical_meta.json  like_ppp.json  (+3 more)
tsdf_channels_table/: index.html
tsdf_dbpd_channels_and_units/: index.html
tsdf_dbpd_schemas/: index.html
tsdf_field_types/: index.html
tsdf_fields/: index.html
tsdf_fields_table/: index.html
usage/: index.html
validating_files/: index.html
writing_data_from_scratch/: index.html
(+121 files in other folders)
