[tool.poetry]
name = "tsdf"
version = "0.2.0"
description = "A package to load TSDF data into Python"
authors = ["Pablo Rodríguez, Peter Kok and Vedran Kasalica"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flatten-json = "^0.1.13"
numpy = "^1.24.1"
mypy = "^1.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
jupyter = "^1.0.0"
ipykernel = "^6.19.2"
coverage = "^7.0.0"
pytest-cov = "^4.0.0"
pandas = "^1.5.2"
matplotlib = "^3.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
