[tool.poetry]
name = "tsdf"
version = "0.4.0"
description = "A Python library that provides methods for encoding and decoding TSDF (Time Series Data Format) data, which allows you to easily create, manipulate and serialize TSDF files in your Python code."
authors = ["Peter Kok <p.kok@esciencecenter.nl>",
            "Pablo Rodríguez <p.rodriguez-sanchez@esciencecenter.nl>",
            "Vedran Kasalica <v.kaslica@esciencecenter.nl>"]
license = "Apache-2.0"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
readme = "README.md"
keywords = ["Time Series Data Format (TSDF)", "binary data", "digital sensors"]
repository = "https://github.com/biomarkersParkinson/tsdf"

[tool.poetry.dependencies]
python = "^3.9"
flatten-json = "^0.1.13"
numpy = "^1.24.1"
mypy = "^1.0.1"
mkdocs = "^1.4.2"
mkdocs-jupyter = "^0.22.0"


[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
jupyter = "^1.0.0"
ipykernel = "^6.19.2"
coverage = "^7.0.0"
pytest-cov = "^4.0.0"
pandas = "^1.5.2"
matplotlib = "^3.6.3"

[tool.poetry.scripts]
validate-tsdf = "tsdf.validator:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
